Printing: Fix upscale PDF breakage

PDF scaling was implemented by scaling the page size, which no longer
works when sending the PDF from print preview. Instead, perform the
scaling in Pdfium engine, like we do for fit to page.

Bug: 835654
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I0f2c6cef995b85090a6ea0b540b5c940d7513495
Reviewed-on: https://chromium-review.googlesource.com/1036083
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Reviewed-by: Raymes Khoury <raymes@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560879}
Former-commit-id: da7dc652f35badf004c0c7e5b7966152fddbf4d3