components/printing/renderer/print_render_frame_helper.cc
@@ -286,9 +286,18 @@ void EnsureOrientationMatches(const PrintMsg_Print_Params& css_params,
 
 void ComputeWebKitPrintParamsInDesiredDpi(
     const PrintMsg_Print_Params& print_params,
+    bool source_is_pdf,
     blink::WebPrintParams* webkit_print_params) {
   int dpi = GetDPI(&print_params);
   webkit_print_params->printer_dpi = dpi;
+  if (source_is_pdf) {
+    // The |scale_factor| in print_params comes from the |scale_factor| in
+    // PrintSettings, which converts an integer percentage between 10 and 200
+    // to a float in PrintSettingsFromJobSettings. As a result, it can be
+    // converted back safely for the integer |scale_factor| in WebPrintParams.
+    webkit_print_params->scale_factor =
+        static_cast<int>(print_params.scale_factor * 100);
+  }
   webkit_print_params->rasterize_pdf = print_params.rasterize_pdf;
   webkit_print_params->print_scaling_option = print_params.print_scaling_option;
 
@@ -572,6 +581,14 @@ blink::WebView* FrameReference::view() {
   return view_;
 }
 
+// static
+double PrintRenderFrameHelper::GetScaleFactor(double input_scale_factor,
+                                              bool is_pdf) {
+  if (input_scale_factor >= PrintRenderFrameHelper::kEpsilon && !is_pdf)
+    return input_scale_factor;
+  return 1.0f;
+}
+
 // static - Not anonymous so that platform implementations can use it.
 void PrintRenderFrameHelper::PrintHeaderAndFooter(
     blink::WebCanvas* canvas,
@@ -745,20 +762,21 @@ PrepareFrameAndViewForPrint::PrepareFrameAndViewForPrint(
       is_printing_started_(false),
       weak_ptr_factory_(this) {
   PrintMsg_Print_Params print_params = params;
-  if (!should_print_selection_only_ ||
-      !PrintingNodeOrPdfFrame(frame, node_to_print_)) {
+  bool source_is_pdf = PrintingNodeOrPdfFrame(frame, node_to_print_);
+  if (!should_print_selection_only_ || !source_is_pdf) {
     bool fit_to_page =
         ignore_css_margins && IsWebPrintScalingOptionFitToPage(print_params);
-    ComputeWebKitPrintParamsInDesiredDpi(params, &web_print_params_);
+    ComputeWebKitPrintParamsInDesiredDpi(params, source_is_pdf,
+                                         &web_print_params_);
     frame->PrintBegin(web_print_params_, node_to_print_);
-    double scale_factor = 1.0f;
-    if (print_params.scale_factor >= PrintRenderFrameHelper::kEpsilon)
-      scale_factor = print_params.scale_factor;
+    double scale_factor = PrintRenderFrameHelper::GetScaleFactor(
+        print_params.scale_factor, source_is_pdf);
     print_params = CalculatePrintParamsForCss(
         frame, 0, print_params, ignore_css_margins, fit_to_page, &scale_factor);
     frame->PrintEnd();
   }
-  ComputeWebKitPrintParamsInDesiredDpi(print_params, &web_print_params_);
+  ComputeWebKitPrintParamsInDesiredDpi(print_params, source_is_pdf,
+                                       &web_print_params_);
 }
 
 PrepareFrameAndViewForPrint::~PrepareFrameAndViewForPrint() {
@@ -1222,8 +1240,8 @@ bool PrintRenderFrameHelper::CreatePreviewDocument() {
   }
 
   PageSizeMargins default_page_layout;
-  double scale_factor =
-      print_params.scale_factor >= kEpsilon ? print_params.scale_factor : 1.0f;
+  double scale_factor = GetScaleFactor(print_params.scale_factor,
+                                       !print_preview_context_.IsModifiable());
 
   ComputePageLayoutInPointsForCss(print_preview_context_.prepared_frame(), 0,
                                   print_params, ignore_css_margins_,
@@ -1314,14 +1332,15 @@ bool PrintRenderFrameHelper::CreatePreviewDocument() {
   return true;
 }
 
-#if BUILDFLAG(ENABLE_PRINT_PREVIEW)
 bool PrintRenderFrameHelper::RenderPreviewPage(
     int page_number,
     const PrintMsg_Print_Params& print_params) {
   PdfMetafileSkia* initial_render_metafile = print_preview_context_.metafile();
   base::TimeTicks begin_time = base::TimeTicks::Now();
+  double scale_factor = GetScaleFactor(print_params.scale_factor,
+                                       !print_preview_context_.IsModifiable());
   PrintPageInternal(print_params, page_number,
-                    print_preview_context_.total_page_count(),
+                    print_preview_context_.total_page_count(), scale_factor,
                     print_preview_context_.prepared_frame(),
                     initial_render_metafile, nullptr, nullptr);
   print_preview_context_.RenderedPreviewPage(base::TimeTicks::Now() -
@@ -1342,7 +1361,6 @@ bool PrintRenderFrameHelper::RenderPreviewPage(
           print_params.printed_doc_type);
   return PreviewPageRendered(page_number, std::move(metafile));
 }
-#endif  // BUILDFLAG(ENABLE_PRINT_PREVIEW)
 
 bool PrintRenderFrameHelper::FinalizePrintReadyDocument() {
   DCHECK(!is_print_ready_metafile_sent_);
@@ -1643,7 +1661,9 @@ void PrintRenderFrameHelper::PrintPages() {
     UMA_HISTOGRAM_COUNTS("PrintPreview.PageCount.SystemDialog", printed_count);
   }
 
-  if (!PrintPagesNative(prep_frame_view_->frame(), page_count)) {
+  bool is_pdf = PrintingNodeOrPdfFrame(prep_frame_view_->frame(),
+                                       prep_frame_view_->node());
+  if (!PrintPagesNative(prep_frame_view_->frame(), page_count, is_pdf)) {
     LOG(ERROR) << "Printing failed.";
     return DidFinishPrinting(FAIL_PRINT);
   }
@@ -1651,7 +1671,8 @@ void PrintRenderFrameHelper::PrintPages() {
 
 #if defined(OS_MACOSX) || defined(OS_WIN)
 bool PrintRenderFrameHelper::PrintPagesNative(blink::WebLocalFrame* frame,
-                                              int page_count) {
+                                              int page_count,
+                                              bool is_pdf) {
   const PrintMsg_PrintPages_Params& params = *print_pages_params_;
   const PrintMsg_Print_Params& print_params = params.params;
 
@@ -1664,11 +1685,12 @@ bool PrintRenderFrameHelper::PrintPagesNative(blink::WebLocalFrame* frame,
   CHECK(metafile.Init());
 
   PrintHostMsg_DidPrintDocument_Params page_params;
-  PrintPageInternal(print_params, printed_pages[0], page_count, frame,
-                    &metafile, &page_params.page_size,
-                    &page_params.content_area);
+  PrintPageInternal(print_params, printed_pages[0], page_count,
+                    print_params.scale_factor, frame, &metafile,
+                    &page_params.page_size, &page_params.content_area);
   for (size_t i = 1; i < printed_pages.size(); ++i) {
-    PrintPageInternal(print_params, printed_pages[i], page_count, frame,
+    PrintPageInternal(print_params, printed_pages[i], page_count,
+                      GetScaleFactor(print_params.scale_factor, is_pdf), frame,
                       &metafile, nullptr, nullptr);
   }
 
@@ -1919,12 +1941,12 @@ void PrintRenderFrameHelper::PrintPageInternal(
     const PrintMsg_Print_Params& params,
     int page_number,
     int page_count,
+    double scale_factor,
     blink::WebLocalFrame* frame,
     PdfMetafileSkia* metafile,
     gfx::Size* page_size_in_dpi,
     gfx::Rect* content_area_in_dpi) {
-  double css_scale_factor =
-      params.scale_factor >= kEpsilon ? params.scale_factor : 1.0f;
+  double css_scale_factor = scale_factor;
 
   // Save the original page size here to avoid rounding errors incurred by
   // converting to pixels and back and by scaling the page for reflow and
@@ -1957,13 +1979,13 @@ void PrintRenderFrameHelper::PrintPageInternal(
   // TODO(thestig): Figure out why Linux is different.
 #if defined(OS_WIN)
   float webkit_page_shrink_factor = frame->GetPrintPageShrink(page_number);
-  float scale_factor = css_scale_factor * webkit_page_shrink_factor;
+  float final_scale_factor = css_scale_factor * webkit_page_shrink_factor;
 #else
-  float scale_factor = css_scale_factor;
+  float final_scale_factor = css_scale_factor;
 #endif
 
-  cc::PaintCanvas* canvas =
-      metafile->GetVectorCanvasForNewPage(page_size, canvas_area, scale_factor);
+  cc::PaintCanvas* canvas = metafile->GetVectorCanvasForNewPage(
+      page_size, canvas_area, final_scale_factor);
   if (!canvas)
     return;
 
@@ -1979,12 +2001,13 @@ void PrintRenderFrameHelper::PrintPageInternal(
 #endif
     // |page_number| is 0-based, so 1 is added.
     PrintHeaderAndFooter(canvas, page_number + 1, page_count, *frame,
-                         scale_factor / fudge_factor, page_layout_in_points,
-                         params);
+                         final_scale_factor / fudge_factor,
+                         page_layout_in_points, params);
   }
 
-  float webkit_scale_factor = RenderPageContent(
-      frame, page_number, canvas_area, content_area, scale_factor, canvas);
+  float webkit_scale_factor =
+      RenderPageContent(frame, page_number, canvas_area, content_area,
+                        final_scale_factor, canvas);
   DCHECK_GT(webkit_scale_factor, 0.0f);
 
   // Done printing. Close the canvas to retrieve the compiled metafile.
