third_party/blink/public/web/web_print_params.h
@@ -51,6 +51,9 @@ struct WebPrintParams {
   // Specifies user selected DPI for printing.
   int printer_dpi;
 
+  // Specifies the scale factor in percent. 100 is 1:1 (default scaling).
+  int scale_factor = 100;
+
   // Specifies whether to print PDFs as image.
   bool rasterize_pdf = false;
 
@@ -86,6 +89,7 @@ struct WebPrintParams {
                  const WebRect& printable_area,
                  const WebSize& paper_size,
                  int printer_dpi,
+                 int scale_factor,
                  WebPrintScalingOption print_scaling_option,
                  bool use_printing_layout,
                  int num_pages_per_sheet)
@@ -93,6 +97,7 @@ struct WebPrintParams {
         printable_area(printable_area),
         paper_size(paper_size),
         printer_dpi(printer_dpi),
+        scale_factor(scale_factor),
         print_scaling_option(print_scaling_option),
         use_printing_layout(use_printing_layout),
         num_pages_per_sheet(num_pages_per_sheet) {}
